fix remarks